Some edits for better visualization

--- a/Codes/Q1.ipynb
+++ b/Codes/Q1.ipynb
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "ingredient = pd.read_csv('Data/ingredient.csv')\n",
+    "ingredient = pd.read_csv('../Data/ingredient.csv')\n",
     "ingredient.head()"
    ]
   },
