--- a/Codes/Q3.ipynb
+++ b/Codes/Q3.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "# importing the text data from the folder Data\n",
     "L = []\n",
-    "with open(\"Data/text.txt\",\"r\") as text:\n",
+    "with open(\"../Data/text.txt\",\"r\") as text:\n",
     "    lines = text.readlines()\n",
     "    for ind, line in enumerate(lines[:-1]):\n",
     "        L.append(line)\n",
